# minebot

./: Cargo.toml  bot.py  run.sh
minebot/: Cargo.toml
minebot-py/: Cargo.toml
minebot-py/src/: lib.rs
minebot/src/: blocks.rs  clock.rs  events.rs  gamestate.rs  geom.rs  lib.rs  main.rs
nbt/: Cargo.toml
nbt-derive/: Cargo.toml
nbt-derive/src/: lib.rs  nbt_decode.rs  nbt_encode.rs
nbt/src/: codec.rs  lib.rs
packets/: Cargo.toml
packets/src/: lib.rs
